Fix implementation of GenerateLinks
- fix non-working code
- correct the precedence of generation methods (prefer dynamic to
static)